--- a/public/styles/page.css
+++ b/public/styles/page.css
@@ -207,6 +207,34 @@ footer p{
     margin: 20px;
 }
 
+#modal {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+  
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 2;
+  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#modal img {
+    max-height: 100%;
+    max-width: 100%;
+}
+
+#modal.hidden {
+    display: none;
+}
+
+.noScroll {
+    overflow: hidden;
+}
+
 
 @media(max-width:900px){
     header{
