--- a/public/styles/productContainer.css
+++ b/public/styles/productContainer.css
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 15px;
+    font-size: 1rem;
     margin: 5px;
     padding: 0px 20px;
     background-color: rgba(0, 0, 0, 0.07);
@@ -22,6 +22,12 @@
 .block h1, .block p{
     margin: 3px 0px;
 }
+.quantity{
+    text-align: center;
+}
+.productButtonsContainer p{
+    font-size: 1rem;
+}
 
 .block img{
     max-width: 150px;
@@ -29,6 +35,7 @@
 }
 
 .descButton{
+    font-size: 1rem;
     border: 1px solid black;
     border-radius: 5px;
 }
@@ -61,7 +68,7 @@
 
 .desc{
     width: 150px;
-    font-size: 15px;
+    font-size: 1rem;
     margin: auto;
     margin-top: -5px;
     padding: 3px 20px;
@@ -93,7 +100,7 @@
 .aumenta{
     background-color: rgba(0, 132, 255, 0.425);;
     width: 70px;
-    font-size: 20px;
+    font-size: 1.2rem;
     line-height: 15px;
     border-radius: 10px;
 }
@@ -106,7 +113,7 @@
 .diminuisci{
     background-color: rgba(255, 0, 0, 0.425);
     width: 70px;
-    font-size: 20px;
+    font-size: 1.2rem;
     line-height: 15px;
     border-radius: 10px;
 }
@@ -116,10 +123,17 @@
     background-color: rgba(255, 0, 0, 0.699);
 }
 
+.productButtonsContainer .modifyButton{
+    max-width: 20px;
+}
+.modifyButton:hover{
+    cursor: pointer;
+}
+
 
 @media(max-width: 800px){
     .blocco{
-        font-size: 10px;
+        font-size: 0.9rem;
         padding: 0px 10px;
         margin: 2px;
         width:90px;
@@ -135,12 +149,12 @@
     }
 
     .aggiungiCarrello{
-        font-size: 10px;
+        font-size: 0.9rem;
     }
 
     .scheda{
         width: 90px;
-        font-size: 10px;
+        font-size: 0.9rem;
         margin-top: -2px;
         padding: 2px 10px;
     }
