Aggiunta schermata home, carrello, wishlist, recensione (in corso)

--- a/public/styles/page.css
+++ b/public/styles/page.css
@@ -70,12 +70,13 @@ form[name=searchProducts].menuSearch{
 }
 
 #cart{
-    background-image: url(../assets/carrello.png);
+    background-image: url(../assets/cart.png);
     background-size: contain;
     background-repeat: no-repeat;
     height: 50px;
     width: 50px;
     margin: 10px;
+    color: white;
     position: relative;
 }
 
