--- a/public/styles/sectionReviews.css
+++ b/public/styles/sectionReviews.css
@@ -2,7 +2,7 @@
     padding: 0px 50px;
 }
 
-#mainSection .containerProdotti{
+#mainSection .productContainer{
     justify-content: center;
 }
 .childBlock{
@@ -64,125 +64,3 @@ textarea {
 
 
 
-
-.rating{
-    max-width: 160px;
-}
-#reviews .profile{
-    background-color: rgba(255, 255, 255, 0);
-}
-#reviews .profile:hover{
-    background-color: rgba(255, 255, 255, 0);
-}
-
-#reviews .profile a{
-    text-decoration: none;
-}
-
-#reviews .profile p{
-    color: black;
-}
-.review{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 15px;
-    margin: 10px;
-    background-color: rgba(0, 0, 0, 0.07);
-    border-radius: 10px;
-}
-.row{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width:100%;
-}
-.row p{
-    margin: 10px 0px 10px 0px;
-}
-.row a.productTitle{
-    text-decoration: none;
-    color: black;
-    background-color: rgba(0, 0, 0, 0.089);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-left:5px;
-    padding-right: 5px;
-    border-radius: 5px;
-}
-.row a.productTitle:hover{
-    background-color: rgba(0, 0, 0, 0.171);
-}
-
-.likeBlock{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.likeButton{
-    background-image: url(../assets/likevuoto.png);
-    background-position: center;
-    background-size: cover;
-    height: 20px;
-    width: 20px;
-    margin-right: 10px;
-}
-
-.dislikeButton{
-    background-image: url(../assets/likeblu.png);
-    background-position: center;
-    background-size: cover;
-    height: 20px;
-    width: 20px;
-    margin-right: 10px;
-}
-.dislikeButton:hover,.likeButton:hover{
-    cursor: pointer;
-}
-
-.deleteReviewButton{
-    padding: 3px;
-    border-radius: 4px;
-    background-color: rgba(255, 0, 0, 0.719);
-}
-
-.deleteReviewButton:hover{
-    cursor:pointer;
-    background-color: rgba(255, 0, 0, 0.432);
-}
-.likeContainer{
-    font-family: 'Raleway',sans-serif;
-    border-radius: 15px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-height: 500px;
-    width: 300px;
-    overflow-y:auto;
-    background-color: rgb(221, 221, 221);
-}
-.likeContainer .user p{
-    color: black;
-}
-.hover{
-    cursor: pointer;
-}
-
-@media(max-width: 600px){
-    .review{
-        font-size: 12px;
-        padding:10px;
-    }
-    .rating{
-        max-width: 100px;
-    }
-    .likeBlock{
-        flex-direction: column;
-        align-items: flex-start;
-    }
-    #reviews .profile p{
-        font-size: 15px;
-        margin:3px;
-    }
-}
