--- a/public/styles/sectionSeller.css
+++ b/public/styles/sectionSeller.css
@@ -1,8 +1,8 @@
 #mainSection{
     padding: 0px 50px;
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: flex-start; */
 }
 
 form{
