--- a/public/styles/productContainer.css
+++ b/public/styles/productContainer.css
@@ -9,7 +9,7 @@
     align-items: center;
     font-size: 1rem;
     margin: 5px;
-    padding: 0px 20px;
+    padding: 0px 10px;
     background-color: rgba(0, 0, 0, 0.07);
     width: 150px;
     border-radius: 10px;
@@ -77,11 +77,10 @@
     font-size: 1rem;
     margin: auto;
     margin-top: -5px;
-    padding: 3px 20px;
+    padding: 3px 10px;
     background-color: rgba(0, 0, 0, 0.07);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    transition: 0.5s;
 }
 
 .wishlistButton{
@@ -165,13 +164,40 @@
 .modifyButton:hover{
     cursor: pointer;
 }
-
-
 @media(max-width: 800px){
     .block{
-        font-size: 0.7rem;
-        padding: 0px 10px;
+        font-size: 0.8rem;
+        padding: 0px 5px;
         margin: 2px;
+        width:120px;
+    }
+
+    .block img{
+        max-width: 100px;
+        max-height: 120px;
+    }
+
+    .block h3, .block p{
+        width:120px;
+    }
+
+    .desc{
+        font-size:0.8rem;
+        width: 120px;
+        margin-top: -2px;
+        padding: 2px 5px;
+    }
+    .increment{
+        width:33px;
+    }
+    .decrement{
+        width:33px;
+    }
+}
+
+@media(max-width: 600px){
+    .block{
+        font-size: 0.7rem;
         width:90px;
     }
 
@@ -189,10 +215,8 @@
     }
 
     .desc{
+        font-size: 0.7rem;
         width: 90px;
-        font-size:0.8rem;
-        margin-top: -2px;
-        padding: 2px 10px;
     }
     .increment{
         width:27px;
