--- a/public/styles/sectionReviews.css
+++ b/public/styles/sectionReviews.css
@@ -1,6 +1,3 @@
-#mainSection{
-    padding: 0px 50px;
-}
 
 #mainSection .productContainer{
     justify-content: center;
@@ -13,7 +10,6 @@
 .horizontalBlock{
     display: flex;
     align-items: flex-start;
-    font-size: 15px;
 }
 
 .sideDesc{
@@ -26,36 +22,41 @@
 }
 #title{
     text-align: center;
-    font-size: 35px;
+    font-size: 2.5rem;
     font-weight:700;
 }
 textarea {
     font-size:1rem;
     resize: none;
     height: 5em; /*em è relativo al font size, se metto width 51em vuol dire che è larga 51 caratteri*/
-    width: 51em;
+    width: 45em;
 }
 .error{
     color:red;
 }
 @media(max-width:800px){
     .sideDesc{
-        font-size: 12px;
+        font-size: 0.8rem;
         width: 170px;
     }
-}
-@media(max-width:520px){
     textarea{
-        font-size: 10px;
-        height: 9em;
         width: 100%;
     }
     #title{
-        font-size:25px;
+        font-size:2rem;
+    }
+}
+@media(max-width:600px){
+    textarea{
+        font-size: 10px;
+        height: 9em;
+    }
+    #title{
+        font-size:1.5rem;
     }
 }
 @media(max-width:400px){
-    .schedaLaterale{
+    .sideDesc{
         width: 140px;
     }
 }
