--- a/public/styles/sectionSeller.css
+++ b/public/styles/sectionSeller.css
@@ -1,5 +1,4 @@
 
-
 form{
     display: flex;
     flex-direction: column;
@@ -85,4 +84,21 @@ button.redButton{
 .modalDelete span:hover{
     cursor: pointer;
     text-decoration: underline;
+}
+#layoutMenu{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+#layoutMenu.hidden{
+    display:none;
+}
+#layoutMenu label{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 3px;
+}
+#layoutMenu label input{
+    width: 20%;
 }
