--- a/public/styles/productContainer.css
+++ b/public/styles/productContainer.css
@@ -123,14 +123,14 @@
     width:20px;
 }
 
-.nonDisponibile{
+/* .nonDisponibile{
     background-color: rgba(255, 0, 0, 0.2);
 }
 
 .inArrivo{
     background-color: rgba(255, 208, 0, 0.349)
 }
-
+ */
 
 .increment{
     background-color: rgba(0, 132, 255, 0.425);;
