--- a/public/styles/sectionSeller.css
+++ b/public/styles/sectionSeller.css
@@ -1,5 +1,5 @@
 
-form{
+.formContainer,form,#errorsPhp,#layoutMenu{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -21,12 +21,13 @@ form[name="newProduct"] input[type="submit"]{
     background-repeat: no-repeat;
     height: 25px;
 }
-#errorsPhp{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+form label input{
+    width: 30%;
 }
 
+input[name=url],input[name=image]{
+    width: 100%;
+}
 button{
     margin: 5px;
 }
@@ -43,7 +44,7 @@ label{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin:5px 0px;
+    margin: 3px;
 }
 
 #mobile{
@@ -85,20 +86,8 @@ button.redButton{
     cursor: pointer;
     text-decoration: underline;
 }
-#layoutMenu{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
+
 #layoutMenu.hidden{
     display:none;
 }
-#layoutMenu label{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 3px;
-}
-#layoutMenu label input{
-    width: 20%;
-}
+
